--- a/App/Areas/Admin/Views/StockManagement/PrintRecord.cshtml
+++ b/App/Areas/Admin/Views/StockManagement/PrintRecord.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    Layout = "_Layout";
+    Layout = null;
 }
 <div>
     <iframe target="_blank" src="~/pdf/@ViewBag.PdfPath" style="height:100vh; width:100%" />
