--- a/App/Views/Shared/_Layout.cshtml
+++ b/App/Views/Shared/_Layout.cshtml
@@ -144,7 +144,7 @@
                     <button id="sidebarToggleTop" class="btn btn-link d-md-none rounded-circle mr-3">
                         <i class="fa fa-bars"></i>
                     </button>
-
+                    <button class="btn btn-info" onclick="history.back();">Back</button>
                     <!-- Topbar Search -->
                     <form class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search">
                         <div class="input-group">
@@ -157,7 +157,7 @@
                             </div>
                         </div>
                     </form>
-
+                    <button class="btn btn-info" onclick="history.forward()">Next</button>
                     <!-- Topbar Navbar -->
                     <ul class="navbar-nav ml-auto">
 
